# sams_website

./: .gitignore  404.html  CNAME  DEPLOYMENT_RAILWAY.md  Procfile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
2024/05/01/hello-world/: index.html
2025/07/08/hello-world/: index.html
about/: index.html
django_site/config/: settings.py  urls.py
django_site/content/: .authors.yml  cv.md  publications.md
django_site/content/config/: authors.yaml  featured_post.yaml  site_config.yaml
django_site/content/posts/: gorton_and_denton.md  pfd-toolkit-announcement.md  rethinking-significance.md
django_site/pages/: content.py  context_processors.py  featured_post.yaml  forms.py  middleware.py  site_config.yaml  tests.py  urls.py  views.py
docs/: .authors.yml  about.md  index.md  publications.md
docs/blog/: index.md
docs/posts/: hello-world.md  rethinking-significance.md  second-post.md  the-lives-we-could-save.md
docs/stylesheets/: extra.css
hooks/: socialmedia.py
publications/: index.html
rethinking-significance/: index.html
search/: search_index.json
site/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
site/about/: index.html
site/publications/: index.html
site/rethinking-significance/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
stylesheets/: extra.css
(+13 files in other folders)
